[project]
name = "dod-prohibited"
version = "0.1.0"
description = "Provides an easy-to-browse, searchable, and regularly updated list of substances prohibited by the Department of Defense (DoD) for use in dietary supplements."
authors = [{ name = "Gustavo Argote", email = "gustavo.argote@icloud.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]


[project.optional-dependencies]
jupyterlab = ["jupyterlab>=4.5.1"]
docs = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.7.1",
    "pymdown-extensions>=10.12",
]
test = ["pytest>=7.0.0", "pytest-mock>=3.10.0", "pytest-cov>=4.0.0"]

[dependency-groups]
docs = [
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
]
