[project]
name = "dod-prohibited"
version = "0.1.0"
description = "Provides an easy-to-browse, searchable, and regularly updated list of substances prohibited by the Department of Defense (DoD) for use in dietary supplements."
authors = [{ name = "Gustavo Argote", email = "gustavo.argote@icloud.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ctx-python>=0.0.1a10",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
]


[project.optional-dependencies]
jupyterlab = ["jupyterlab>=4.5.1"]
docs = [
    "zensical",
]
test = ["pytest>=7.0.0", "pytest-mock>=3.10.0", "pytest-cov>=4.0.0"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "zensical>=0.0.24",
]
docs = [
    "zensical",
]
jupyterlab = ["matplotlib>=3.10.8", "seaborn>=0.13.2"]
